--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ logs/
 # environment variables
 .env
 .env.production
+.env.test
 
 # macOS-specific files
 .DS_Store
@@ -30,3 +31,4 @@ coverage/
 playwright-report/
 test-results/
 screenshots/
+playwright/.auth/
