--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 SUPABASE_URL=###
 SUPABASE_KEY=###
-OPENROUTER_API_KEY=###
+PUBLIC_SITE_URL=http://localhost:4321
+SUPABASE_SERVICE_ROLE_KEY=###
+
+E2E_USERNAME_ID=###
+E2E_USERNAME=###
+E2E_PASSWORD=###
