--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -44,7 +44,7 @@ jobs:
   status-comment:
     runs-on: ubuntu-latest
     needs: [linting, unit-test]
-    if: always() && (needs.linting.result == 'success' && needs.unit-test.result == 'success' && needs.e2e-test.result == 'success')
+    if: always() && (needs.linting.result == 'success' && needs.unit-test.result == 'success')
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
