--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@astrojs/react": "^4.3.1",
     "@astrojs/sitemap": "^3.5.1",
     "@hookform/resolvers": "^5.2.2",
+    "@przeprogramowani/10x-mvp-tracker": "^1.0.1",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.80.0",
